...
  Scaffold(
      topBar = { TopNavigationBar(navigationActions, screenTitle = null) },
      bottomBar = {
        BottomNavigationMenu({ navigationActions.navigateTo(it) }, LIST_TOP_LEVEL_DESTINATION, "")
      },
      content = { pd ->
        Column(modifier = Modifier.fillMaxSize().padding(pd).testTag("todoListScreen")) {
          AddTodoEntry { name ->
            todoListViewModel.addNewTodo(name)
            // For better UX display the current tasks whenever a new task is added so that the user
            // can see the added task even if the done todos are currently being displayed
            showCompleted = false
          }
...
                colors =
                    ButtonColors(
                        containerColor = Color.Transparent,
                        contentColor = MaterialTheme.colorScheme.secondary,
                        disabledContainerColor = MaterialTheme.colorScheme.secondary,
                        disabledContentColor = MaterialTheme.colorScheme.onSecondary),
                modifier = Modifier.testTag("currentTasksButton")) {
                  Text("Current Tasks", modifier = Modifier.padding(8.dp), fontSize = 20.sp)
                }
            TextButton(
                onClick = { showCompleted = true },
                enabled = !showCompleted,
                colors =
                    ButtonColors(
                        containerColor = Color.Transparent,
                        contentColor = MaterialTheme.colorScheme.secondary,
                        disabledContainerColor = MaterialTheme.colorScheme.secondary,
                        disabledContentColor = MaterialTheme.colorScheme.onSecondary),
                modifier = Modifier.testTag("completedTasksButton")) {
                  Text("Completed Tasks", modifier = Modifier.padding(8.dp), fontSize = 20.sp)
                }
          }
          LazyColumn(modifier = Modifier.fillMaxSize().padding(top = 8.dp)) {
            val todosToShow = if (showCompleted) doneTodos.value else actualTodos.value
            items(todosToShow.size) { i ->
...
 */
@Composable
fun AddTodoEntry(onAdd: (String) -> Unit) {
  var name by remember { mutableStateOf("") }
  var showRecordDialog by remember { mutableStateOf(false) }
  Card(
      modifier = Modifier.padding(8.dp).fillMaxWidth().testTag("addTodoEntry"),
      shape = RoundedCornerShape(16.dp)) {
        Row(verticalAlignment = Alignment.CenterVertically) {
          IconButton(
              onClick = {
                onAdd(name)
                name = ""
              },
              modifier = Modifier.padding(8.dp).testTag("addTodoButton"),
              enabled = name.isNotEmpty(),
              colors =
                  IconButtonColors(
                      containerColor = MaterialTheme.colorScheme.secondary,
                      contentColor = MaterialTheme.colorScheme.onSecondary,
                      disabledContainerColor = Color.Transparent,
...
                Icon(Icons.Default.Add, contentDescription = "Add Todo")
              }
          BasicTextField(
              value = name,
              onValueChange = { name = it },
              modifier =
                  Modifier.weight(1f).padding(start = 8.dp, end = 8.dp).testTag("addTodoTextField"),
              textStyle = LocalTextStyle.current.copy(fontSize = 18.sp, color = Color.Black),
              singleLine = true,
              decorationBox = { innerTextField ->
                if (name.isEmpty()) {
                  Text(text = "Add a new task", color = Color.Gray)
                }
                innerTextField()
              })

          // Button to record todo name
          IconButton(
              onClick = { showRecordDialog = true },
              modifier = Modifier.testTag("voiceInputButton"),
              colors =
                  IconButtonColors(
                      containerColor = MaterialTheme.colorScheme.secondary,
                      contentColor = MaterialTheme.colorScheme.onSecondary,
                      disabledContainerColor = Color.Transparent,
                      disabledContentColor = Color.LightGray)) {
...
      onResult = { newName = it }) {
        Button(
            onClick = {
              onAdd(newName)
              onDismiss()
            },
            modifier = Modifier.width(100.dp).testTag("recordNameDialogAddButton"),
            enabled = newName.isNotEmpty()) {
              Text("Add")
            }
      }
}

...
 * @param onDismiss code executed when the dialog is dismissed
 */
@Composable
fun RenameTodoDialog(todoName: String, onRename: (String) -> Unit, onDismiss: () -> Unit) {
  var newName by remember { mutableStateOf(TextFieldValue(todoName, TextRange(todoName.length))) }
  AlertDialog(
      modifier = Modifier.testTag("renameTodoDialog"),
      onDismissRequest = { onDismiss() },
      title = { Text("Rename Todo", modifier = Modifier.testTag("renameTodoDialogTitle")) },
      text = {
        OutlinedTextField(
            value = newName,
            onValueChange = { newName = it },
            singleLine = true,
            modifier = Modifier.padding(8.dp).fillMaxWidth().testTag("renameTodoTextField"),
            shape = RoundedCornerShape(32.dp),
        )
      },
      confirmButton = {
        TextButton(
            modifier = Modifier.testTag("renameTodoConfirmButton"),
            onClick = {
              onRename(newName.text)
              onDismiss()
            },
            enabled = newName.text.isNotEmpty(),
            colors =
...
                    Color.LightGray)) {
              Text("Rename")
            }
      },
      dismissButton = {
        TextButton(
            modifier = Modifier.testTag("renameTodoDismissButton"),
            onClick = { onDismiss() },
            colors =
                ButtonColors(
                    Color.Transparent,
                    MaterialTheme.colorScheme.tertiary,
                    Color.Transparent,
...
