...
      speechRecognizer.cancel()
      speechRecognizer.destroy()
    }
  }

  AlertDialog(
      modifier = Modifier.testTag("speechDialog"),
      onDismissRequest = {
        /**
         * Do nothing so that the user doesn't discard the whole ongoing transcription if he
         * accidentally clicks outside the dialog.
         */
      },
      title = {
        Text(
            title,
            textAlign = TextAlign.Center,
            modifier = Modifier.fillMaxWidth().testTag("speechDialogTitle"))
      },
      text = {
        Text(
            description,
            textAlign = TextAlign.Justify,
            modifier = Modifier.fillMaxWidth().testTag("speechDialogDescription"),
            fontWeight = FontWeight.Bold)
      },
      confirmButton = {
        Row(horizontalArrangement = Arrangement.SpaceEvenly, modifier = Modifier.fillMaxWidth()) {
          Button(
              onClick = { onDismiss() }, modifier = Modifier.testTag("speechDialogDismissButton")) {
                Text("Cancel", textAlign = TextAlign.Center)
              }
          Spacer(modifier = Modifier.width(4.dp))
          finishButton(!isRecording)
        }
      },
...
